manifests/applications/istio-rollouts/resources/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: istio-rollout
spec:
  replicas: 5
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: istio-rollout
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: istio-rollout
    spec:
      containers:
        - name: istio-rollout
          # image: argoproj/rollouts-demo:blue
          # image: argoproj/rollouts-demo:green
          # image: argoproj/rollouts-demo:yellow
          image: argoproj/rollouts-demo:slow-blue
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: 32Mi
              cpu: 5m
  strategy:
    canary:
      canaryService: istio-rollout-canary
      stableService: istio-rollout-stable
      # analysis will be performed in background, while rollout is progressing through its steps
#      analysis:
#        startingStep: 1   # index of step list, of when to start this analysis
#        templates:
#          - templateName: istio-success-rate
#        args:             # arguments allow AnalysisTemplates to be re-used
#          - name: service
#            value: canary
#          - name: namespace
#            valueFrom:
#              fieldRef:
#                fieldPath: metadata.namespace
      trafficRouting:
        istio:
          virtualService:
            name: istio-rollout-vsvc
            routes:
              - primary
      steps:
        - setWeight: 10
        - pause: {}         # pause indefinitely
        - setWeight: 20
        - pause: {duration: 20s}
        - setWeight: 30
        - pause: {duration: 20s}
        - setWeight: 40
        - pause: {duration: 20s}
        - setWeight: 50
        - pause: {duration: 20s}
        - setWeight: 60
        - pause: {duration: 20s}
        - setWeight: 70
        - pause: {duration: 20s}
        - setWeight: 80
        - pause: {duration: 20s}
        - setWeight: 90
        - pause: {duration: 20s}
